styles.css
/* ... */
.intro-div
{
    padding: 10px;
    color: white;
    height: 800px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-image: url(images/twilight_background_full.jpg);
    background-size: cover;
    background-position: center;
}

.intro-div h1, .intro-div h2
{
    position: relative;
    font-weight: 300;
    line-height: normal;
    animation: IntroAppear 1s linear;
}


@keyframes IntroAppear
{
    from {color: rgba(255,255,255, 0.0); top: -50px;}
    to   {color: rgba(255,255,255, 1); top: 0px;}
}

.intro-div h1
{
    font-size: 4em;
}

.intro-div h2
{
    font-size: 3em;
}

#expedition-text
{
    content: 'Hi';
}

.opening
{
    color: rgb(50,50,50);
    background-color: rgb(230,230,230);
}

.opening-text
{
    font-weight: 300;
    margin-bottom: 15px;
}

.opening-text h1
{
    color: rgb(10,62,112);
    font-weight: 600;
}

.opening h1
{
    text-transform: uppercase;
    margin-bottom: 10px;
}

.opening p
{
    font-size: 1.8em;
    
    text-align: justify;
}

.signed
{
    float: right;
    font-size: 2em;
    font-family: 'Pacifico', cursive;
}

.opening-img
{
    text-align: center;
}

.opening-img img
{
    max-width: 80%;
}

.testimonials
{
    background-color: rgb(235,235,235);
    text-align: center;
}

.testimonials h1
{
    color: rgb(10,62,112);
    text-transform: uppercase;
}

.testimonials h3
{
    font-weight: 300;
    margin-bottom: 5px;
}

/* Bubble Slider */

.bubble blockquote {
	margin: 10px 10px 0;
	background: #fff;
	padding: 60px;
	position: relative;
	border: none;
	border-radius: 8px;
	font-size: 1.25em;
	color: #1e528e;
}
.bubble blockquote:before, .bubble blockquote:after {
	content: "\201C";
	position: absolute;
	font-size: 80px;
	padding: 10px;
	line-height: 1;
	color: #1e528e;
}
.bubble blockquote:before {
	top: 0;
	left: 10px;
}
.bubble blockquote:after {
	content: "\201D";
	right: 10px;
	bottom: -.5em;
}
.bubble div {
	width: 0;
	height: 0;
	border-left: 0 solid transparent;
	border-right: 20px solid transparent;
	border-top: 20px solid #fff;
	margin: 0 0 0 60px;
	margin-bottom: 10px;
}
.bubble cite 
{
	padding-left: 20px;
	font-size: 1.25em;
    color: black;
}

.america
{
    height: 400px;
    background-image: url(images/america.jpg);
    background-position: right;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: white;
}

/********************************************
* BEARD PAGE STYLING
*
********************************************/

.beard
{
  margin-top: 10px;
}

.beard-intro
{
    background-color: rgb(250,250,250);
    text-align: center;
}

.beard-intro p
{
    font-size: 1.2em;
}
.beard-intro-header h1
{
    background-color: rgb(157,22,22);
        /*rgb(10,62,112);*/
    padding: 10px 0;
    margin-bottom: 10px;
    color: white;
    text-transform: uppercase;
    font-size: 4em;
    font-weight: 500;
}

.beard-intro h4
{
    /*background-color: rgb(187,52,52);*/
    color: rgb(157,22,22);
    margin: 10px 0 30px 0;
    padding: 10px;
}


#beard-list
{
    /*background-color: rgb(240,240,240);*/
    /*background-color: rgb(240,240,240);*/
    padding: 10px;
    margin-bottom: 10px;
}

.line-container
{
    text-align: center;
}

.list-bottom
{
    width: 150px;
    margin: auto;
    display: block;
    border-bottom: 1px solid rgb(150,150,150);
}

#beard-list li
{
    display: inline;
    font-size: 1.5em;
    text-transform: uppercase;
}

#beard-list li:not(:first-child):before {
    content: " | ";
}

.products-button-row
{
    text-align: center;
    margin-bottom: 5px;
}

#products-button
{
    
    color: white;
    
    background-color: rgb(200,200,200);
    font-size: 1.5em;
    display: inline-block;
    padding: 0px 50px;
    transition: background-color 0.5s, color 0.5s;
}

#products-button:hover
{
    
    color: white;
    background-color: rgb(150,150,150);
    cursor: pointer;
}

.product-types
{
    background-color: rgb(250,250,250);
    color: rgb(50,50,50);
    margin-bottom: 10px;
    padding: 0 10px 10px 10px;
}

.product-type-item
{
    background-color: rgb(240,240,240);
}

.product-type-item h2
{
    color:  rgb(157,22,22)!;
    text-transform: uppercase;
    margin-bottom: 5px;
    color: rgb(157,22,22);
    font-weight: 400;
}

.product-types img
{
    width: 250px;
    max-width: 100%;
}
.product-types p
{
    text-indent: 0pxl
    padding: 10px;
    display: inline;
    font-size: 1.2em;
}

.signature-background
{
    background-image: url(images/signature-background.jpg);
}

.signature-items, #expedition-items, #hearth-items, #twilight-items, #excursion-items
{
    /*background-color: rgba(50,50,50,0.1);*/
    color: white;
}

.expedition-background
{
    background-image: url(images/fern.jpg);
}

.hearth-background
{
    background-image: url(images/hearth-background.jpg);
}

.twilight-background
{
    background-image: url(images/twilight_background.jpg);
}

.excursion-background
{
    background-image: url(images/excursion_background.jpg);
}

.signature-background, .expedition-background, .hearth-background, .twilight-background, .excursion-background
{
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

.product-description
{
    color: white;
    background-color: rgba(200,200,200,0.2);
    text-align: center;
    padding: 10px 100px;
    margin-bottom: 10px;
}

@media only screen and (max-width: 800px)
{
    .product-description
    {
        padding: 10px;
    }
}

.product-details
{
    background-color: rgba(157,22,22, 0.4);
        /*rgba(10,62,112,0.5);*/
    width: 360px;
    max-width: 360px;
    margin: auto;
    padding: 5px 0;
}

.product h3
{
    font-weight: 400;
    color: white;
}

.product h4
{
    color: rgb(200,200,200);
    margin-bottom: 20px;
}
/* ... */

